add the H2 database  part of the application